# LetMeCraft

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/LetMeCraft/: CMakeLists.txt  dllmain.cpp
cpp/LetMeCraft/lmc/: Common.hpp  CraftingScanner.hpp  EvictionManager.hpp  GameObjects.hpp  GlyphColorizer.hpp  GlyphContext.hpp  GlyphIcons.hpp  GlyphOverlay.hpp  GlyphPositioner.hpp  GlyphWarmup.hpp  GlyphWidget.hpp  InputDevice.hpp  MovementLock.hpp  PlayerSensor.hpp  PromptOverlay.hpp  RoutineBlocker.hpp  SpotClaims.hpp  StationIcons.hpp  UmgReflect.hpp
scripts/: build.ps1  package.ps1  release-readme.txt
